CICD/jenkins/eks/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cicd-app
  labels:
    name: cicd-app
    environment: development
