CICD/jenkins/eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cicd-app
  namespace: cicd-app
  labels:
    app: cicd-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: cicd-app
